--- a/keynote-lcdr.html
+++ b/keynote-lcdr.html
@@ -63,7 +63,7 @@
 												<li>📅 <b>Astuce #1</b> : Bloquer du temps dans son agenda, du temps dédié au sourcing, pour que la chasse ne soit pas le dernier point de votre to-do list – le point que vous remettez toujours au lendemain !</li>
 												<li>🎈 <b>Astuce #2</b> : Rendez le sourcing fun, en organisant des sourcing jams. Le principe est simple : tous les Recruteurs chassent en même temps sur un même brief pour constituer une longlist !</li>
 												<li>🍬 <b>Astuce #3</b> : Alimenter un vivier de talents, pour ne pas chasser en permanence, mais pour recontacter d’anciens candidats talentueux que l’on n’avait pas pu embaucher une première fois,</li>
-												<li>🔁 Astuce #4</b> : Re-lan-cer systématiquement les profils contactés, pour multiplier par 2 ou 3 ses taux de retours sur approche directe, </li>
+												<li>🔁 <b>Astuce #4</b> : Re-lan-cer systématiquement les profils contactés, pour multiplier par 2 ou 3 ses taux de retours sur approche directe, </li>
 												<li>📜 <b>Astuce #5</b> : Personnaliser ses approches, pour rendre le contact plus humain, </li>
 												<li>🧠 <b>Astuce #6</b> : Utiliser les biais cognitifs pour conditionner les gens à vous dire « oui »,</li>
 												<li>💥 <b>Astuce #7</b> : Créer de l’émotion (confiance, connivence, surprise…) pour hameçonner l’attention de votre cible,</li>
@@ -76,6 +76,13 @@
 			<li><p>J'ai écrit un (long) résumé et l’ai publié sur le blog de <b>L’Ecole Du Recrutement</b> (LEDR), il est disponible ici 👉 <a href="https://lecoledurecrutement.fr/6-conseils-pour-un-sourcing-plus-efficace/">6 Conseils Pour Un Sourcing Plus Efficace</a> </p></li>
 			<li><p><b>Amélie Collinet</b>, Freelance Recruiter, a écrit un billet sur son <a href="https://www.newpromise.fr/blog">blog</a>, il est disponible ici 👉 <a href="https://www.newpromise.fr/post/rendre-tes-approches-candidats-plus-efficaces-en-une-journ%C3%A9e-et-pour-0-euros">Rendre tes approches candidats plus efficaces en une journée et pour 0 euros !</a></p></li>
 		</ul>
+		<div class="row">
+			<div class="col-6 col-12-small">
+				<ul class="actions stacked">
+					<li><a href="https://lecoledurecrutement.fr/6-conseils-pour-un-sourcing-plus-efficace/" class="button primary fit">LIRE L'ARTICLE SUR LE BLOG DE LEDR</a></li>
+					<li><a href="https://www.newpromise.fr/post/rendre-tes-approches-candidats-plus-efficaces-en-une-journ%C3%A9e-et-pour-0-euros" class="button fit">LIRE L'ARTICLE SUR LE BLOG D'AMELIE COLLINET</a></li>
+				</ul>
+		</div>
 			
                <p>Bonne lecture !</p>
                
