--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
 				<!-- Intro -->
 					<div id="intro">
 						<h1>François Gauthier's<br />
-						Portfolio</h1>
-						<p>360° Recruiter <br /></a>
+						Handcrafted Blog</h1>
+						<p>360° Recruiter,  <br /></a>
+						Talent Acquisition Manager, <br /></a>
 						Passionate about Recruitment & Tech<br /></a></p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
