--- a/index2.html
+++ b/index2.html
@@ -22,7 +22,8 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h3>François Gauthier's Handcrafted Webpage</h3>
+						<h2>François Gauthier's <br/>
+						Handcrafted Webpage</h2>
 						<p>360° Recruiter, Talent Acquisition team Manager,<br /></a>
 						Passionate about Recruitment & Tech<br /></a></p>
 						<ul class="actions">
@@ -70,7 +71,8 @@
 										<a href="https://www.youtube.com/watch?v=3DszpF7LObg"><b>2018</b> – Commment Hello Talent aide Talentsoft à recruter de manière collaborative</a><br />
 										<a href="https://www.youtube.com/watch?v=QNzMM3bL7js&feature=emb_title"><b>2018</b> – Comment recruter 200 personnes avec 3 recruteurs ? - François Gauthier à #TruSourcing</a><br /></p>
 							
-
+									<br/>
+								
 									<h3>ARTICLES (texte)</h3>
 										<p><a href="https://www.recruitingbrainfood.com/the-brainfood-tribune/20-questions-with-francois-gauthier/"><b>2021</b> – Recruiting Brainfood tribune – 20 Questions with François Gauthier</a><br />
 										<a href="https://lecoledurecrutement.fr/6-conseils-pour-un-sourcing-plus-efficace/"><b>2020</b> – 6 Conseils Pour Un Sourcing Plus Efficace</a><br />
