--- a/cv.html
+++ b/cv.html
@@ -144,7 +144,7 @@
 									<h3>KEYNOTES ET TÉMOIGNAGES</h3>
 										<p><a href="https://www.youtube.com/watch?v=t8F5vL-6GQY"><b>2020</b> – Quelques astuces pour rendre vos approches efficaces</a><br />
 										<a href="https://www.youtube.com/watch?v=3DszpF7LObg"><b>2018</b> – Commment Hello Talent aide Talentsoft à recruter de manière collaborative</a><br />
-										<a href="https://www.youtube.com/watch?v=QNzMM3bL7js&feature=emb_title"><b>2018</b> – Comment recruter 200 personnes avec 3 recruteurs ? - François Gauthier à #TruSourcing</a><br /></p>
+										<a href="https://www.youtube.com/watch?v=QNzMM3bL7js&feature=emb_title"><b>2018</b> – Comment recruter 200 personnes avec 3 recruteurs ?</a><br /></p>
 
 									<h3>ARTICLES</h3>
 										<p><a href="https://www.recruitingbrainfood.com/the-brainfood-tribune/20-questions-with-francois-gauthier/"><b>2021</b> – 20 Questions with François Gauthier</a><br />
