--- a/lets-work-together.html
+++ b/lets-work-together.html
@@ -145,7 +145,7 @@
 						<hr />
 								<h2>PUBLICATIONS</h2><br />
 									<h3>KEYNOTES & TESTIMONIALS</h3>
-										<p><a href="https://www.youtube.com/watch?v=5biygEF0E5s"><b>[FR] – 2021</b> – Sourceurs ? Non, Peut-Être LIVE #1 - Le Sourcing c'est quoi ?</a><br />
+										<p><a href="https://www.youtube.com/watch?v=5biygEF0E5s"><b>[FR] – 2021</b> – Sourceurs ? Non, Peut-Être : Live #1 - Le Sourcing c'est quoi ?</a><br />
 										<a href="https://www.youtube.com/watch?v=t8F5vL-6GQY"><b>[FR] – 2020</b> – Quelques astuces pour rendre vos approches efficaces</a><br />
 										<a href="https://www.youtube.com/watch?v=3DszpF7LObg"><b>[FR] – 2018</b> – Commment Hello Talent aide Talentsoft à recruter de manière collaborative</a><br />
 										<a href="https://www.youtube.com/watch?v=QNzMM3bL7js&feature=emb_title"><b>[FR] – 2018</b> – Comment recruter 200 personnes avec 3 recruteurs ?</a><br /></p>
